# Columnar-Engine-From-Scratch

./: CMakeLists.txt  LICENSE  benchmark_test.cpp  main.cpp  test.cpp  test.txt
.github/workflows/: cmake-multi-platform.yml
script/: build.sh  convert.sh  run_query.sh  setup.sh
src/: column_types.cpp  column_types.h  csv_wrapper.cpp  csv_wrapper.h  file_reader.cpp  file_writer.cpp  file_writer.h  utilities.cpp  utilities.h
src/column_types/: column_types.cpp  column_types.h
src/csv_wrapper/: csv_wrapper.cpp  csv_wrapper.h
src/file_reader/: file_reader.cpp  file_reader.h
src/file_writer/: file_writer.cpp  file_writer.h
src/operators/: operators.cpp  operators.h
src/scheme/: scheme.cpp  scheme.h
src/utilities/: utilities.cpp  utilities.h
